--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -15,6 +15,8 @@ body{
   background-color: rgba(255,255,255,0.5);
   border: 1px solid black;
   padding: 10px;
+  pointer-events: all;
+
 
 }
 /*.App-header {
