--- a/ui/src/components/timeline/GestureHandler.css
+++ b/ui/src/components/timeline/GestureHandler.css
@@ -1,3 +1,15 @@
+.BackgroundRect{
+    background-color: white;
+    fill: white;
+}
+
 .GestureHandler{
+    pointer-events: all;
+}
+
+.TimeMarker {
+    stroke: #999;
+    stroke-width: 0.5;
+    stroke-dasharray: 2 2;
     pointer-events: all;
 }
